--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.error.whitelabel.enabled=false
 server.error.path=/error
 
 # database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
-spring.datasource.username=root
-spring.datasource.password=Quanfey
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=YNBotbsStQTeNmYrMSAWlGdRqgSIUGpW
 spring.jpa.hibernate.ddl-auto=update
 
 # mail configuration
