chnage the data source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ server.error.whitelabel.enabled=false
 server.error.path=/error
 
 # database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
-spring.datasource.username=root
-spring.datasource.password=Quanfey
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
+#spring.datasource.username=root
+#spring.datasource.password=Quanfey
+
+spring.datasource.url=${RAILWAY_DB_URL}
+spring.datasource.username=${RAILWAY_DB_USERNAME}
+spring.datasource.password=${RAILWAY_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 # mail configuration
