--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.error.path=/error
 #spring.datasource.username=root
 #spring.datasource.password=Quanfey
 
-spring.datasource.url=${RAILWAY_DB_URL}
-spring.datasource.username=${RAILWAY_DB_USERNAME}
-spring.datasource.password=${RAILWAY_DB_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 # mail configuration
