--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.error.whitelabel.enabled=false
 server.error.path=/error
 
 # database configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
-#spring.datasource.username=root
-#spring.datasource.password=Quanfey
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
+spring.datasource.username=root
+spring.datasource.password=Quanfey
 
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+#spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+#spring.datasource.username=${PGUSER}
+#spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 # mail configuration
